src/validation/tests/snapshots/rusty__validation__tests__naming_validation_test__LTIME.snap
---
source: src/validation/tests/naming_validation_test.rs
expression: "& result"
---
error[E004]: LTIME can not be used as a name because it is a built-in datatype
  ┌─ <internal>:1:6
  │
1 │ TYPE LTIME : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^ LTIME can not be used as a name because it is a built-in datatype

error[E004]: LTIME: Ambiguous datatype.
  ┌─ <internal>:1:6
  │
1 │ TYPE LTIME : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^ LTIME: Ambiguous datatype.
